# win11-quick-converter

./: .gitignore  CMakeLists.txt  README.md  Win11QuickConverter_DevCert.pfx  init.sh  install.bat
.github/agents/: win11-quick-converter.md
.github/workflows/: build.yml
docs/: backlog-priority.md
docs/adr/: 0001-cli-contract.md
docs/architecture/: cli-contract.md
packaging/: AppxManifest.xml  Win11QuickConverter_DevCert.pfx  installer.iss  register-msix.ps1
src/converter-cli/: CMakeLists.txt
src/converter-cli/include/win11qc/: cli_options.h  wic_converter.h
src/converter-cli/src/: main.cpp  wic_converter.cpp
src/shell-ext/: CMakeLists.txt  shell-ext.def
src/shell-ext/include/win11qc/: shell_extension.h
src/shell-ext/src/: dummy.cpp
src/shell-ext/test_com/: CMakeLists.txt  main.cpp
